packages/svelte/tests/validator/samples/inline-new-class-5/input.svelte
<script module>
	const a = new (class Foo {
		foo = $state(0);
	})();
</script>
