packages/svelte/tests/compiler-errors/samples/runes-wrong-state-args/main.svelte
<script>
	const foo = $state(1, 2, 3);
</script>
